k8s/items-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      name: items
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: acorn/items-service:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 8090
