k8s/reviews-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      name: reviews
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: acorn/reviews-service:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 8090
