k8s/reviews-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: reviews-svc
  labels:
    app: reviews-svc
spec:
  type: ClusterIP
  ports:
    - name: reviews-svc-port
      port: 80
      targetPort: 8080
  selector:
    app: reviews
