k8s/webapi-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
  labels:
    app: webapi-svc
spec:
  type: ClusterIP
  ports:
    - name: webapi-svc-port
      port: 80
      targetPort: 8080
  selector:
    app: webapi
