k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-ingress
spec:
  rules:
    - host: my-reviews.com
      http:
        paths:
          - path: /webapi
            pathType: Prefix
            backend:
              service:
                name: webapi-svc
                port:
                  number: 80
